--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://zakarya07.github.io/zakarya_elkhattabi/",
   "name": "zakarya-elkhattabi",
   "version": "0.1.0",
   "private": true,
@@ -16,8 +17,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "homepage": "https://zakarya07.github.io/zakarya_elkhattabi/"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
