fix the homepage url in package.json (zakarya_elkhattabi to zakarya-elkhattabi)

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://zakarya07.github.io/zakarya_elkhattabi/",
+  "homepage": "https://zakarya07.github.io/zakarya-elkhattabi/",
   "name": "zakarya-elkhattabi",
   "version": "0.1.0",
   "private": true,
